manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "welfareakscluster-841f"
    labels:
        app: "welfareakscluster-841f"
spec:
    type: ClusterIP
    ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
    selector:
        app: "welfareakscluster-841f"
